Thu Oct  7 00:12:04 MDT 1999	Diego Novillo <dnovillo@cygnus.com>

	* gas/d10v: New directory.
	* gas/d10v/d10.exp: New file.
	* gas/d10v/inst.s: New file.
	* gas/d10v/inst.d: New file.

Thu Oct  7 12:52:25 1999  Geoffrey Keating  <geoffk@cygnus.com>

	* gas/mips/elf-rel.s: New file.
	* gas/mips/elf-rel.d: New file.
	* gas/mips/elf-rel2.d: New file.
	* gas/mips/e32-rel2.d: New file.
	* gas/mips/elf-rel2.s: New file.
	* gas/mips/mips.exp: Add elf-rel, elf-rel2.

	* gas/mips/elf_e_flags1.d: Tweak a little so it passes
	even if the CPU is set to something by default.

Mon Oct  4 18:25:49 1999  Doug Evans  <devans@canuck.cygnus.com>

	* gas/m32r/error.exp: New testcase driver.
	* gas/m32r/m32rx.exp: New testcase driver.
	* gas/m32r/fslotx.[sd]: New testcase.
	* gas/m32r/m32rx.[sd]: New testcase.
	* gas/m32r/relax-s.[sd]: New testcase.
	* gas/m32r/interfere.s: New testcase.
	* gas/m32r/wrongsize.s: New testcase.

1999-09-17  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/i386.exp: Enable reloc and white tests for COFF.
	* gas/i386/reloc.d: Accept dir32 relocs.

1999-09-12  Donn Terry  <donn@interix.com>

	* gas/all/gas.exp: Run cofftag test for i*86-*-interix*.
	* lib/gas-defs.exp: Add perror if can not read .d file.

1999-09-04  Steve Chamberlain  <sac@pobox.com>

	* gas/pj/{pj.exp, ops.c, ops.d}: New tests for picoJava.

1999-09-02  Nick Clifton  <nickc@cygnus.com>

	* gas/vtable/vtable.exp: Add [istarget "strongarm*-*-*"] to run
	dump  test "entry0" instead of "entry1".
	
1999-09-01  Scott Bambrough  <scottb@netwinder.org>
 
        * gas/vtable/vtable.exp: Added [istarget "arm*-*-*"] to run dump 
        test "entry0" instead of "entry1".  ARM targets use REL relocs,
        and should use the test entry0.

1999-09-01  H.J. Lu  <hjl@gnu.org>

	* gas/i386/naked.d: Fix for coff targets.

Mon Aug 30 12:18:40 1999  Jeffrey A Law  (law@cygnus.com)

	* gas/hppa/unsorted/*.s: Use .code instead of .SPACE/.SUBSPA for
	sectioning.