@@ -10,14 +10,6 @@ if { ([istarget "*-*-elf*"]
      && ![istarget *-*-linux*aout*]
      && ![istarget *-*-linux*oldld*]
 } then {
-
-    # FIXME: This doesn't work for MIPS and alpha targets because of
-    # the .reginfo and .mdebug sections.
-    setup_xfail mips*-*-*
-    setup_xfail alpha*-*-*
     run_dump_test "section0" 
-
-    setup_xfail mips*-*-*
-    setup_xfail alpha*-*-*
     run_dump_test "section1" 
 }
