@@ -6,6 +6,8 @@
 Contents of section .text:
 Contents of section .data:
  0000 000000                               ...             
+# The MIPS includes a 'section .reginfo' and such here.
+#...
 Contents of section A:
  0000 01010101 0101                        ......          
 Contents of section B:
